--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -6,3 +6,11 @@ background-color: aqua;
 .header img {
   width: 100px;
 }
+
+.loginBlock {
+  float: right;
+}
+
+.loginBlock a {
+  color: black;
+}
